# Honesty

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  conanfile.py  pyproject.toml
.github/workflows/: config-sync.yml
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
honesty/: CMakeLists.txt  entry.cpp  entry.ixx  honesty.ixx  main.cpp  main.ixx  runner.cpp  set.cpp  set.ixx  test.cpp  test.ixx
honesty/benchmark/: CMakeLists.txt
honesty/profile/: CMakeLists.txt
honesty/test/: CMakeLists.txt  entry.cpp  entry.ixx  main.cpp  runner.ixx  set.cpp
src/: CMakeLists.txt  honesty.ixx
src/honesty/: CMakeLists.txt  benchmark.ixx  profile.ixx  test.ixx
src/honesty/benchmark/: CMakeLists.txt
src/honesty/profile/: CMakeLists.txt
src/honesty/test/: CMakeLists.txt  entry.cpp  entry.ixx  expression.ixx  generator.ixx  implementation.cpp  implementation.ixx  literals.ixx  logger.ixx  main.cpp  reporter.ixx  runner.cpp  runner.ixx  set.cpp  set.ixx  suite.cpp  suite.ixx  test.cpp  test.ixx
src/honesty/test/logger/: CMakeLists.txt  stdout.cpp  stdout.ixx
src/honesty/test/reporter/: stdout.cpp  stdout.ixx
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_entry.cpp  test_expect.cpp  test_expression.cpp  test_generator.cpp  test_main.cpp  test_set.cpp  test_suite.cpp  test_test.cpp
tests/unit/types/: CMakeLists.txt  test_main.cpp
tool/cmake/presets/: linux.json  macos.json  platform.json  windows.json
