[project]
description = "Profiling, testing, and benchmarking"
name = "honesty"

license = {text = "MIT"}

authors = [
  {name = "Synodic Software", email = "contact@synodic.software"},
]

readme = "README.md"

dynamic = ["version"]

dependencies = []
requires-python = ">=3.12"

[project.license-files]
paths = ["LICENSE.md"]

[project.urls]
homepage = "https://github.com/Synodic-Software/Synodic-Template-Library"
repository = "https://github.com/Synodic-Software/Synodic-Template-Library"

[tool.pdm.dev-dependencies]
dev = [
  "cmake>=3.27.2",
  "cppython-conan>=0.0.0.dev1",
  "cppython-pdm>=0.2.8.dev2",
]
lint = [
  "black>=22.6.0",
  "pylint>=2.14.5",
  "isort>=5.10.1",
  "mypy>=1.6.0",
]
test = [
  "pytest>=7.1.2",
  "pytest-cov>=3.0.0",
  "pytest-click>=1.1",
  "pytest-mock>=3.8.2",
  "pytest-cppython>=0.2.0.dev0",
]

[tool.pdm.options]
update = ["--update-all"]

[tool.pdm.scripts]
build = {shell = "cppython build"}
test = {shell = "cppython test"}

[build-system]
build-backend = "pdm.backend"
requires = ["pdm.backend"]
